fix extension menu alignment and inconsistency issues

--- a/chrome/menu/extensions-menu.css
+++ b/chrome/menu/extensions-menu.css
@@ -1,8 +1,9 @@
 /* Based on: https://raw.githubusercontent.com/datguypiko/Firefox-Mod-Blur/master/EXTRA%20MODS/Compact%20extensions%20menu/Style%202/With%20Separator%20line/cleaner_extensions_menu.css */
-
 /* Icons only in extensions menu */
+
 #unified-extensions-panel #unified-extensions-view {
-  max-width: 250px !important;
+  /*  For firefox v115.x */
+  width: 100% !important;
 }
 
 #unified-extensions-view {
@@ -22,7 +23,7 @@
 }
 
 #unified-extensions-view .panel-subview-body {
-  padding: 3px !important;
+  padding: 2px !important;
 }
 
 #unified-extensions-view .unified-extensions-item .unified-extensions-item-icon,
@@ -38,20 +39,8 @@
     var(--firefoxcss-number-of-extensions-in-a-row),
     auto
   );
-  justify-items: center !important;
-  align-items: center !important;
-}
-
-#unified-extensions-view
-  .unified-extensions-list
-  .unified-extensions-item-action-button {
-  margin-left: 2px !important;
-  margin-right: 2px !important;
-}
-
-#unified-extensions-view #unified-extensions-area .unified-extensions-item {
-  margin-left: 2px !important;
-  margin-right: 2px !important;
+  justify-items: left !important;
+  align-items: left !important;
 }
 
 #unified-extensions-view .unified-extensions-list .unified-extensions-item,
@@ -60,6 +49,16 @@
 }
 
 #unified-extensions-view #unified-extensions-area {
-  padding-bottom: 3px !important;
+  padding-bottom: 2px !important;
   border-bottom: 1px solid #aeaeae33 !important;
+}
+
+#unified-extensions-view .unified-extensions-list {
+  border-top: 0px solid #aeaeae33 !important;
+}
+
+#wrapper-edit-controls:is([place="palette"], [place="panel"]) > #edit-controls,
+#wrapper-zoom-controls:is([place="palette"], [place="panel"]) > #zoom-controls,
+:is(panelview, #widget-overflow-fixed-list) .toolbaritem-combined-buttons {
+  margin: 0px !important;
 }
